(fix) Remove overflow from group members container

--- a/client/app/styles/styles.scss
+++ b/client/app/styles/styles.scss
@@ -571,7 +571,6 @@ li:hover > .submenu-container {
   background-color: #f1f1f1;
   display: block;
   float: right;
-  overflow-y: auto;
 }
 
 .group-member-container {
@@ -643,7 +642,6 @@ li:hover > .submenu-container {
     display: block;
     width: 100%;
     float: left;
-    overflow-y: scroll;
   }
 
   .group-member-container {
